<resources>
    <string name="app_name">Casa Las Glorias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">Guest</string>
    <string name="nav_header_email">not@signed.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_dial">Call</string>
    <string name="action_place">Locate</string>
    <string name="dialog_search_message">What sounds good?</string>
    <string name="hint_keyword">shrimp, cheese, guacamole, …</string>
    <string name="dialog_search_title">Search</string>
    <string name="button_search">OK</string>
    <string name="button_cancel">Cancel</string>

    <string name="phone_number">tel:+13192942101</string>
    <string name="map_uri">geo:42.0342682,-91.6762866?q=Casa+Las+Glorias</string>

    <string name="navigation_menu_sign_out">Sign Out</string>
    <string name="navigation_menu_sign_in">Sign In</string>

    <string name="main_content_text_view">¡Hola!</string>
    <string name="main_content_text_view_format">¡Hola %1$s!</string>
    <string name="main_content_web_view_url">http://www.casalasglorias.com/home.html</string>

    <string name="sign_in_failure">Unable to sign in</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="html_content_unavailable"><![CDATA[
    <html>
    <head>
    <style>
    h3 {text-align:center;}
    p {text-align:center;}
    </style>
    </head>
    <body>
    <h3>Content not available</h3>
    <p>Please check your internet connection.</p
    </body>
    </html>
    ]]></string>

    <string name="catering_content_web_view_url"><![CDATA[http://nebula.wsimg.com/81051df656d8da187c32506104d122ed?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="dialog_permission_title">Location Permission</string>
    <string name="dialog_permission_message">If you want this app to show your location on the map, allow it to access this devices location when asked.</string>
    <string name="button_ok">OK</string>

    <string name="marker_current_title">You\'re still here!</string>

    <string name="menu_content_salads_url"><![CDATA[http://nebula.wsimg.com/70606069d99ed844cc959afab89a4fe2?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_enchiladas_url"><![CDATA[http://nebula.wsimg.com/de27df251d7f8960090a095bd45c6864?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_burritos_and_wraps_url"><![CDATA[http://nebula.wsimg.com/49443bd6c3c863800eefc6f18abdf383?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_fajitas_and_steaks_url"><![CDATA[http://nebula.wsimg.com/ba0ecfd1d07f3c09f25dd14fd3d6ee4f?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_specialties_url"><![CDATA[http://nebula.wsimg.com/a6bd1c7567e163905f027061c8c0755c?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_mariscos_url"><![CDATA[http://nebula.wsimg.com/6ff02585d7b3da33f330cc5ee36ecb89?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_combinations_url"><![CDATA[http://nebula.wsimg.com/9145900281d7cc6f1f80006f76688fac?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_chimichangas_url"><![CDATA[http://nebula.wsimg.com/305f28c00421acff43f4e68362447a48?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_quesadillas_url"><![CDATA[http://nebula.wsimg.com/91a54193bd7323d6d2517acebfc71651?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_pepes_platters_url"><![CDATA[http://nebula.wsimg.com/72bedfc4d9d1daef2692f0dbf7e05677?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_burgers_and_sandwiches_url"><![CDATA[http://nebula.wsimg.com/705a11a2d386dfbaba5c432c4965b1dc?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_lunch_url"><![CDATA[http://nebula.wsimg.com/3183dc8a977120f231fd94c2579b2d1f?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_appetizers_url"><![CDATA[http://nebula.wsimg.com/6a2373a5492a2c1f3cd8a190a239a134?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_dips_for_your_chips_url"><![CDATA[http://nebula.wsimg.com/cabcf9ccbfdc36fa329ae6d132972a17?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_extras_url"><![CDATA[http://nebula.wsimg.com/d44c54a12aacfe7d97038c3df267e1cb?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_beverages_url"><![CDATA[http://nebula.wsimg.com/afe03acbe13b507375ab1e65c47bfb91?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>
    <string name="menu_content_desserts_url"><![CDATA[http://nebula.wsimg.com/d9a4c6e17ef6434c1a239cd53355c1ef?AccessKeyId=048C0DB35EC570DAD1F0&disposition=0&alloworigin=1]]></string>

    <string name="menu_content_no_results">No Results</string>
    <string name="menu_content_all_of_the_above">All of the above</string>

    <string name="dialog_search_error_no_keyword">"Did you forget to type in something?"</string>
    <string name="dialog_search_error_invalid_keyword">"Sorry, you can\'t search for that!"</string>
    <string name="dialog_search_error_no_category">"Did you forget to pick a category?"</string>

    <string name="content_description_salads">Salads Section of Menu</string>
    <string name="content_description_enchiladas">Enchiladas Section of Menu</string>
    <string name="content_description_burritos_and_wraps">Burritos and Wraps Section of Menu</string>
    <string name="content_description_fajitas_and_steaks">Fajitas and Steaks Section of Menu</string>
    <string name="content_description_specialties">Specialties Section of Menu</string>
    <string name="content_description_mariscos">Mariscos Section of Menu</string>
    <string name="content_description_combinations">Combinations Section of Menu</string>
    <string name="content_description_chimichangas">Chimichangas Section of Menu</string>
    <string name="content_description_quesadillas">Quesadillas Section of Menu</string>
    <string name="content_description_pepes_platters">Pepe\'s Platters Section of Menu</string>
    <string name="content_description_burgers_and_sandwiches">Burgers and Sandwiches Section of Menu</string>
    <string name="content_description_lunch">Lunch Section of Menu</string>
    <string name="content_description_appetizers">Appetizers Section of Menu</string>
    <string name="content_description_dips_for_your_chips">Dips For Your Chips Section of Menu</string>
    <string name="content_description_extras">Extras Section of Menu</string>
    <string name="content_description_beverages">Beverages Section of Menu</string>
    <string name="content_description_desserts">Desserts Section of Menu</string>
    <string name="content_description_divider">divider</string>
    <string name="content_description_section_of_menu">Section of Menu</string>

    <string name="widget_button_text">Change</string>

    <string name="navigation_menu_title_home">Home</string>
    <string name="navigation_menu_title_menu">Menu</string>
    <string name="navigation_menu_title_catering">Catering</string>
    <string name="navigation_menu_title_find">Find Us</string>
    <string name="navigation_menu_title_account">Account</string>
</resources>
