<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navigation_menu_title_home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/navigation_menu_title_menu" />
        <item
            android:id="@+id/nav_catering"
            android:icon="@drawable/truck_delivery"
            android:title="@string/navigation_menu_title_catering" />
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/navigation_menu_title_find"/>
    </group>

    <item android:title="@string/navigation_menu_title_account">
        <menu>
            <item
                android:id="@+id/nav_sign"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/navigation_menu_sign_in"/>
        </menu>
    </item>

</menu>
